# platform.core.security.dpm-toolkit

./: CMakeLists.txt  LICENSE  common.cmake  mobile.cmake  org.tizen.dpm-toolkit.manifest  org.tizen.dpm-toolkit.xml  project.config  tv.cmake  wearable.cmake
data/: dpm-toolkit.xml  sampleapp.tpk  test.xml
edc_resource/: genlist_custom.edc
include/: dpm-toolkit-popup.h  dpm-toolkit.h
packaging/: dpm-toolkit.spec
res/: org.tizen.dpm-toolkit.edc
src/: application.c  bluetooth.c  dpm-toolkit-cli.c  dpm-toolkit-gui.c  dpm-toolkit-popup.c  dpm-toolkit.c  location.c  password.c  restriction.c  security.c  wifi.c  zone.c
test-app/: CMakeLists.txt  org.tizen.dpm-toolkit-app.manifest  org.tizen.dpm-toolkit-app.xml
test-app/data/: test.xml
test-app/edc_resource/: genlist_custom.edc
test-app/include/: dpm-toolkit-popup.h  dpm-toolkit.h
test-app/src/: bluetooth.c  dpm-toolkit-popup.c  dpm-toolkit.c  location.c  password.c  restriction.c  security.c  wifi.c
