CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dpm-toolkit C)
SET(PACKAGE org.tizen.dpm-toolkit)

SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
#SET(LIBDIR "\${prefix}/lib")

SET(TEST_APP ./test-app)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FALGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Werror -Wall -Wextra")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

IF(NOT DEFINED LIB_INSTALL_DIR)
	SET(LIB_INSTALL_DIR "${CMAKE_INSTALL_FULL_LIBDIR}")
ENDIF(NOT DEFINED LIB_INSTALL_DIR)

IF(NOT DEFINED INCLUDE_INSTALL_DIR)
	SET(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
ENDIF(NOT DEFINED INCLUDE_INSTALL_DIR)

IF("${ARCH}" STREQUAL "arm")
        ADD_DEFINITIONS("-DTARGET")
        MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

IF (CMAKE_BUILD_TYPE MATCHES "RELEASE")
        ADD_DEFINITIONS("-DBUILD_TYPE_RELEASE")
ENDIF (CMAKE_BUILD_TYPE MATCHES "RELEASE")

ADD_SUBDIRECTORY(${TEST_APP})
