CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.dpm-toolkit C)

SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

IF(NOT CMAKE_BUILD_TYPE)
        SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF(NOT CMAKE_BUILD_TYPE)

ADD_DEFINITIONS("-DUG_WAYLAND")

INCLUDE(FindPkgConfig)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(test_pkgs REQUIRED
	dlog
	glib-2.0
	efl-extension
	elementary
	capi-appfw-application
	libxml-2.0
	capi-system-system-settings
	evas
	dpm
)

INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS} include)
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

SET(BASE_SRCS src/dpm-toolkit.c src/dpm-toolkit-popup.c)

INCLUDE("${TIZEN_PROFILE_NAME}.cmake")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wp,-U_FORTIFY_SOURCE")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed -pie")

ADD_EXECUTABLE(${PROJECT_NAME} ${BASE_SRCS} ${TESTCASES})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/bin)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${test_pkgs_LIBRARIES})

#Create edj file
ADD_CUSTOM_TARGET(org.tizen.dpm-toolkit.edj
	COMMAND edje_cc -no-save ${CMAKE_CURRENT_SOURCE_DIR}/res/org.tizen.dpm-toolkit.edc
	${CMAKE_BINARY_DIR}/org.tizen.dpm-toolkit.edj
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/res/org.tizen.dpm-toolkit.edc)

ADD_DEPENDENCIES(${PROJECT_NAME} org.tizen.dpm-toolkit.edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/org.tizen.dpm-toolkit.edj DESTINATION ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/res)

#Install app data
INSTALL(FILES res/${PROJECT_NAME}.png DESTINATION ${CMAKE_DESKTOP_ICON_DIR})
INSTALL(FILES ${PROJECT_NAME}.xml DESTINATION ${CMAKE_APP_SHARE_PACKAGES_DIR})
INSTALL(FILES data/test.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME})
